--- a/flex-layout.scss
+++ b/flex-layout.scss
@@ -1,5 +1,4 @@
 $defaultMarginPadding: 2px !default;
-
 %layout {
     display: flex;
     //in main axis
@@ -11,51 +10,45 @@ $defaultMarginPadding: 2px !default;
     &.wrap {
         flex-wrap: wrap;
     }
-
     &.layout-margin {
         margin: $defaultMarginPadding;
-
-        > *,
+         > *,
         > .flex {
             margin: $defaultMarginPadding;
         }
     }
-
     &.layout-padding {
         padding: $defaultMarginPadding;
-
-        > *,
+         > *,
         > .flex {
             padding: $defaultMarginPadding;
         }
     }
-
     &.layout-fill {
         margin: 0;
         width: 100%;
         min-height: 100%;
         height: 100%;
     }
-
     > .flex {
         flex: 1;
         box-sizing: border-box;
     }
-
+    &.flex {
+        height: 100%;
+    }
     > .flex-shrink {
         -webkit-flex: 0 1 auto;
         -ms-flex: 0 1 auto;
         flex: 0 1 auto;
         box-sizing: border-box;
     }
-
     > .flex-grow {
         -webkit-flex: 1 0 auto;
         -ms-flex: 1 0 auto;
         flex: 1 0 auto;
         box-sizing: border-box;
     }
-
     > .flex-none {
         -webkit-flex: 0 0 auto;
         -ms-flex: 0 0 auto;
@@ -63,194 +56,160 @@ $defaultMarginPadding: 2px !default;
         box-sizing: border-box;
     }
     $i: 0;
-
     @while $i <= 100 {
         > .flex-#{$i} {
             flex: 1 1 #{$i}%;
             box-sizing: border-box;
         }
-
+        &.flex-#{$i} {
+            height: 100%;
+        }
         @if $i < 5 {
             $i: $i + 1;
         }
-
         @else {
             $i: $i + 5;
         }
     }
-
     > .flex-33 {
         flex: 1 1 33.33%;
         box-sizing: border-box;
     }
-
+    &.flex-33 {
+        height: 100%;
+    }
     > .flex-66 {
         flex: 1 1 66.66%;
         box-sizing: border-box;
     }
-
+    &.flex-66 {
+        height: 100%;
+    }
     &.align-wrap-start {
         align-content: flex-start;
     }
-
     &.align-wrap-center {
         align-content: center;
     }
-
     &.align-wrap-end {
         align-content: flex-end;
     }
-
     &.align-wrap-space-around {
         align-content: space-around;
     }
-
     &.align-wrap-space-between {
         align-content: space-between;
     }
-
     &.align-wrap-stretch {
         align-content: stretch;
     }
 }
-
 .layout-v {
     @extend %layout;
     flex-direction: column;
-
     > .flex {
         height: auto;
     }
     $i: 0;
-
     @while $i <= 100 {
         > .flex-#{$i} {
             max-width: 100%;
             max-height: #{$i}%;
         }
-
         @if $i < 5 {
             $i: $i + 1;
         }
-
         @else {
             $i: $i + 5;
         }
     }
-
     > .flex-33 {
         max-width: 100%;
         max-height: 33.33%;
     }
-
     > .flex-66 {
         max-width: 100%;
         max-height: 66.66%;
     }
-
     &.align-h-start {
         align-items: flex-start;
     }
-
     &.align-h-center {
         align-items: center;
     }
-
     &.align-h-end {
         align-items: flex-end;
     }
-
     &.align-h-stretch {
         align-items: stretch;
     }
-
     &.align-v-start {
         justify-content: flex-start;
     }
-
     &.align-v-center {
         justify-content: center;
     }
-
     &.align-v-end {
         justify-content: flex-end;
     }
-
     &.align-v-space-around {
         justify-content: space-around;
     }
-
     &.align-v-space-between {
         justify-content: space-between;
     }
 }
-
 .layout-h {
     @extend %layout;
     flex-direction: row;
-
     > .flex {
         width: auto;
     }
     $i: 0;
-
     @while $i <= 100 {
         > .flex-#{$i} {
             max-width: #{$i}%;
             max-height: 100%;
         }
-
         @if $i < 5 {
             $i: $i + 1;
         }
-
         @else {
             $i: $i + 5;
         }
     }
-
     > .flex-33 {
         max-width: 33.33%;
         max-height: 100%;
     }
-
     > .flex-66 {
         max-width: 66.66%;
         max-height: 100%;
     }
-
     &.align-h-start {
         justify-content: flex-start;
     }
-
     &.align-h-center {
         justify-content: center;
     }
-
     &.align-h-end {
         justify-content: flex-end;
     }
-
     &.align-h-space-around {
         justify-content: space-around;
     }
-
     &.align-h-space-between {
         justify-content: space-between;
     }
-
     &.align-v-start {
         align-items: flex-start;
     }
-
     &.align-v-center {
         align-items: center;
     }
-
     &.align-v-end {
         align-items: flex-end;
     }
-
     &.align-v-stretch {
         align-items: stretch;
     }
