--- a/flex-layout.scss
+++ b/flex-layout.scss
@@ -1,4 +1,5 @@
 $defaultMarginPadding: 2px !default;
+
 %layout {
     display: flex;
     //in main axis
@@ -10,42 +11,52 @@ $defaultMarginPadding: 2px !default;
     &.wrap {
         flex-wrap: wrap;
     }
+
     &.layout-margin {
         margin: $defaultMarginPadding;
+
         > * {
             margin: $defaultMarginPadding;
         }
     }
+
     &.layout-padding {
         padding: $defaultMarginPadding;
+
         > * {
             padding: $defaultMarginPadding;
         }
     }
+
     &.layout-fill {
         margin: 0;
         width: 100%;
         min-height: 100%;
     }
+
     > .flex {
         flex: 1;
         box-sizing: border-box;
     }
+
     &.flex {
         height: 100% !important;
     }
+
     > .flex-shrink {
         -webkit-flex: 0 1 auto;
         -ms-flex: 0 1 auto;
         flex: 0 1 auto;
         box-sizing: border-box;
     }
+
     > .flex-grow {
         -webkit-flex: 1 0 auto;
         -ms-flex: 1 0 auto;
         flex: 1 0 auto;
         box-sizing: border-box;
     }
+
     > .flex-none {
         -webkit-flex: 0 0 auto;
         -ms-flex: 0 0 auto;
@@ -55,9 +66,10 @@ $defaultMarginPadding: 2px !default;
     $i: 0;
     @while $i <= 100 {
         > .flex-#{$i} {
-            flex: 1 1 #{$i}%;
+            flex: 1 1 #{$i*1%};
             box-sizing: border-box;
         }
+
         &.flex-#{$i} {
             height: 100% !important;
         }
@@ -68,42 +80,52 @@ $defaultMarginPadding: 2px !default;
             $i: $i + 5;
         }
     }
+
     > .flex-33 {
         flex: 1 1 33.33%;
         box-sizing: border-box;
     }
+
     &.flex-33 {
         height: 100% !important;
     }
+
     > .flex-66 {
         flex: 1 1 66.66%;
         box-sizing: border-box;
     }
+
     &.flex-66 {
         height: 100% !important;
     }
+
     &.align-wrap-start {
         align-content: flex-start;
     }
+
     &.align-wrap-center {
         align-content: center;
     }
+
     &.align-wrap-end {
         align-content: flex-end;
     }
+
     &.align-wrap-space-around {
         align-content: space-around;
     }
+
     &.align-wrap-space-between {
         align-content: space-between;
     }
+
     &.align-wrap-stretch {
         align-content: stretch;
     }
 }
-.layout-v {
-    @extend %layout;
+@mixin layout-v() {
     flex-direction: column;
+
     > .flex {
         height: auto;
     }
@@ -111,7 +133,7 @@ $defaultMarginPadding: 2px !default;
     @while $i <= 100 {
         > .flex-#{$i} {
             max-width: 100%;
-            max-height: #{$i}%;
+            max-height: #{$i*1%};
         }
         @if $i < 5 {
             $i: $i + 1;
@@ -120,52 +142,63 @@ $defaultMarginPadding: 2px !default;
             $i: $i + 5;
         }
     }
+
     > .flex-33 {
         max-width: 100%;
         max-height: 33.33%;
     }
+
     > .flex-66 {
         max-width: 100%;
         max-height: 66.66%;
     }
+
     &.align-h-start {
         align-items: flex-start;
     }
+
     &.align-h-center {
         align-items: center;
     }
+
     &.align-h-end {
         align-items: flex-end;
     }
+
     &.align-h-stretch {
         align-items: stretch;
     }
+
     &.align-v-start {
         justify-content: flex-start;
     }
+
     &.align-v-center {
         justify-content: center;
     }
+
     &.align-v-end {
         justify-content: flex-end;
     }
+
     &.align-v-space-around {
         justify-content: space-around;
     }
+
     &.align-v-space-between {
         justify-content: space-between;
     }
 }
-.layout-h {
-    @extend %layout;
+@mixin layout-h() {
     flex-direction: row;
+
     > .flex {
         width: auto;
     }
     $i: 0;
     @while $i <= 100 {
         > .flex-#{$i} {
-            max-width: #{$i}%;
+            max-width: #{$i*1%};
             max-height: 100%;
         }
         @if $i < 5 {
@@ -175,39 +208,155 @@ $defaultMarginPadding: 2px !default;
             $i: $i + 5;
         }
     }
+
     > .flex-33 {
         max-width: 33.33%;
         max-height: 100%;
     }
+
     > .flex-66 {
         max-width: 66.66%;
         max-height: 100%;
     }
+
     &.align-h-start {
         justify-content: flex-start;
     }
+
     &.align-h-center {
         justify-content: center;
     }
+
     &.align-h-end {
         justify-content: flex-end;
     }
+
     &.align-h-space-around {
         justify-content: space-around;
     }
+
     &.align-h-space-between {
         justify-content: space-between;
     }
+
     &.align-v-start {
         align-items: flex-start;
     }
+
     &.align-v-center {
         align-items: center;
     }
+
     &.align-v-end {
         align-items: flex-end;
     }
+
     &.align-v-stretch {
         align-items: stretch;
+    }
+}
+
+.layout-v {
+    @extend %layout;
+    @include layout-v();
+}
+
+.layout-h {
+    @extend %layout;
+    @include layout-h();
+}
+
+.layout-h-gt-lg,
+.layout-h-gt-md,
+.layout-h-gt-sm,
+.layout-h-gt-xs,
+.layout-h-lg,
+.layout-h-md,
+.layout-h-sm,
+.layout-h-xl,
+.layout-h-xs,
+.layout-v-gt-lg,
+.layout-v-gt-md,
+.layout-v-gt-sm,
+.layout-v-gt-xs,
+.layout-v-lg,
+.layout-v-md,
+.layout-v-sm,
+.layout-v-xl,
+.layout-v-xs {
+    @extend %layout;
+}
+@media screen and (max-width: 599px) {
+    .layout-v-xs {
+        @include layout-v();
+    }
+
+    .layout-h-xs {
+        @include layout-h();
+    }
+}
+@media screen and (min-width: 600px) {
+    .layout-v-gt-xs {
+        @include layout-v();
+    }
+
+    .layout-h-gt-xs {
+        @include layout-h();
+    }
+}
+@media screen and (min-width: 600px) and (max-width: 959px) {
+    .layout-v-sm {
+        @include layout-v();
+    }
+
+    .layout-h-sm {
+        @include layout-h();
+    }
+}
+@media screen and (min-width: 960px) {
+    .layout-v-gt-sm {
+        @include layout-v();
+    }
+
+    .layout-h-gt-sm {
+        @include layout-h();
+    }
+}
+@media screen and (min-width: 960px) and (max-width: 1279px) {
+    .layout-v-md {
+        @include layout-v();
+    }
+
+    .layout-h-md {
+        @include layout-h();
+    }
+}
+@media screen and (min-width: 1280px) {
+    .layout-v-gt-md {
+        @include layout-v();
+    }
+
+    .layout-h-gt-md {
+        @include layout-h();
+    }
+}
+@media screen and (min-width: 1280px) and (max-width: 1919px) {
+    .layout-v-lg {
+        @include layout-v();
+    }
+
+    .layout-h-lg {
+        @include layout-h();
+    }
+}
+@media screen and (min-width: 1920px) {
+    .layout-v-gt-lg,
+    .layout-v-xl {
+        @include layout-v();
+    }
+
+    .layout-h-gt-lg,
+    .layout-h-xl {
+        @include layout-h();
     }
 }
