--- a/flex-layout.scss
+++ b/flex-layout.scss
@@ -1,9 +1,48 @@
 $defaultMarginPadding: 2px !default;
-
-$layout-breakpoint-xs:     600px !default;
-$layout-breakpoint-sm:     960px !default;
-$layout-breakpoint-md:     1280px !default;
-$layout-breakpoint-lg:     1920px !default;
+$layout-breakpoint-xs: 600px !default;
+$layout-breakpoint-sm: 960px !default;
+$layout-breakpoint-md: 1280px !default;
+$layout-breakpoint-lg: 1920px !default;
+@mixin media-xs {
+     @media screen and (max-width: ($layout-breakpoint-xs - 1)){
+        @content;
+    }
+}
+@mixin media-gt-xs {
+     @media screen and (min-width: $layout-breakpoint-xs){
+        @content;
+    }
+}
+@mixin media-sm {
+     @media screen and (min-width: $layout-breakpoint-xs) and (max-width: ($layout-breakpoint-sm - 1)){
+        @content;
+    }
+}
+@mixin media-gt-sm {
+     @media screen and (min-width: $layout-breakpoint-sm){
+        @content;
+    }
+}
+@mixin media-md {
+     @media screen and (min-width: $layout-breakpoint-sm) and (max-width: ($layout-breakpoint-md - 1)){
+        @content;
+    }
+}
+@mixin media-gt-md {
+     @media screen and (min-width: $layout-breakpoint-md){
+        @content;
+    }
+}
+@mixin media-lg {
+     @media screen and (min-width: $layout-breakpoint-md) and (max-width: ($layout-breakpoint-lg - 1)){
+        @content;
+    }
+}
+@mixin media-gt-lg {
+     @media screen and (min-width: $layout-breakpoint-lg){
+        @content;
+    }
+}
 
 %layout {
     display: flex;
@@ -289,7 +328,7 @@ $layout-breakpoint-lg:     1920px !default;
 .layout-v-xs {
     @extend %layout;
 }
-@media screen and (max-width: 599px) {
+@include media-xs {
     .layout-v-xs {
         @include layout-v();
     }
@@ -298,7 +337,7 @@ $layout-breakpoint-lg:     1920px !default;
         @include layout-h();
     }
 }
-@media screen and (min-width: 600px) {
+@include media-gt-xs {
     .layout-v-gt-xs {
         @include layout-v();
     }
@@ -307,7 +346,7 @@ $layout-breakpoint-lg:     1920px !default;
         @include layout-h();
     }
 }
-@media screen and (min-width: 600px) and (max-width: 959px) {
+@include media-sm {
     .layout-v-sm {
         @include layout-v();
     }
@@ -316,7 +355,7 @@ $layout-breakpoint-lg:     1920px !default;
         @include layout-h();
     }
 }
-@media screen and (min-width: 960px) {
+@include media-gt-sm {
     .layout-v-gt-sm {
         @include layout-v();
     }
@@ -325,7 +364,7 @@ $layout-breakpoint-lg:     1920px !default;
         @include layout-h();
     }
 }
-@media screen and (min-width: 960px) and (max-width: 1279px) {
+@include media-md {
     .layout-v-md {
         @include layout-v();
     }
@@ -334,7 +373,7 @@ $layout-breakpoint-lg:     1920px !default;
         @include layout-h();
     }
 }
-@media screen and (min-width: 1280px) {
+@include media-gt-md {
     .layout-v-gt-md {
         @include layout-v();
     }
@@ -343,7 +382,7 @@ $layout-breakpoint-lg:     1920px !default;
         @include layout-h();
     }
 }
-@media screen and (min-width: 1280px) and (max-width: 1919px) {
+@include media-lg {
     .layout-v-lg {
         @include layout-v();
     }
@@ -352,7 +391,7 @@ $layout-breakpoint-lg:     1920px !default;
         @include layout-h();
     }
 }
-@media screen and (min-width: 1920px) {
+@include media-gt-lg {
     .layout-v-gt-lg {
         @include layout-v();
     }
