--- a/scss/flex-layout.scss
+++ b/scss/flex-layout.scss
@@ -1,4 +1,65 @@
 @import "mixins";
+@mixin flexPercentage($direction) {
+    $i: 0;
+    @while $i <= 100 {
+        > .flex-#{$i} {
+            flex: 1 1 #{$i*1%};
+            box-sizing: border-box;
+            @if ($direction == "v") {
+                max-width: 100%;
+                max-height: #{$i*1%};
+            }
+            @else {
+                max-width: #{$i*1%};
+                max-height: 100%;
+            }
+        }
+
+        &.flex-#{$i} {
+            height: 100% !important;
+        }
+        @if $i < 5 {
+            $i: $i + 1;
+        }
+        @else {
+            $i: $i + 5;
+        }
+    }
+
+    > .flex-33 {
+        flex: 1 1 33.33%;
+        box-sizing: border-box;
+        @if ($direction == "v") {
+            max-width: 100%;
+            max-height: 33.33%;
+        }
+        @else {
+            max-width: 33.33%;
+            max-height: 100%;
+        }
+    }
+
+    &.flex-33 {
+        height: 100% !important;
+    }
+
+    > .flex-66 {
+        flex: 1 1 66.66%;
+        box-sizing: border-box;
+        @if ($direction == "v") {
+            max-width: 100%;
+            max-height: 66.66%;
+        }
+        @else {
+            max-width: 66.66%;
+            max-height: 100%;
+        }
+    }
+
+    &.flex-66 {
+        height: 100% !important;
+    }
+}
 
 %layout {
     display: flex;
@@ -63,41 +124,6 @@
         flex: 0 0 auto;
         box-sizing: border-box;
     }
-    $i: 0;
-    @while $i <= 100 {
-        > .flex-#{$i} {
-            flex: 1 1 #{$i*1%};
-            box-sizing: border-box;
-        }
-
-        &.flex-#{$i} {
-            height: 100% !important;
-        }
-        @if $i < 5 {
-            $i: $i + 1;
-        }
-        @else {
-            $i: $i + 5;
-        }
-    }
-
-    > .flex-33 {
-        flex: 1 1 33.33%;
-        box-sizing: border-box;
-    }
-
-    &.flex-33 {
-        height: 100% !important;
-    }
-
-    > .flex-66 {
-        flex: 1 1 66.66%;
-        box-sizing: border-box;
-    }
-
-    &.flex-66 {
-        height: 100% !important;
-    }
 
     &.align-wrap-start {
         align-content: flex-start;
@@ -129,29 +155,7 @@
     > .flex {
         height: auto;
     }
-    $i: 0;
-    @while $i <= 100 {
-        > .flex-#{$i} {
-            max-width: 100%;
-            max-height: #{$i*1%};
-        }
-        @if $i < 5 {
-            $i: $i + 1;
-        }
-        @else {
-            $i: $i + 5;
-        }
-    }
-
-    > .flex-33 {
-        max-width: 100%;
-        max-height: 33.33%;
-    }
-
-    > .flex-66 {
-        max-width: 100%;
-        max-height: 66.66%;
-    }
+    @include flexPercentage("v");
 
     &.align-h-start {
         align-items: flex-start;
@@ -195,29 +199,7 @@
     > .flex {
         width: auto;
     }
-    $i: 0;
-    @while $i <= 100 {
-        > .flex-#{$i} {
-            max-width: #{$i*1%};
-            max-height: 100%;
-        }
-        @if $i < 5 {
-            $i: $i + 1;
-        }
-        @else {
-            $i: $i + 5;
-        }
-    }
-
-    > .flex-33 {
-        max-width: 33.33%;
-        max-height: 100%;
-    }
-
-    > .flex-66 {
-        max-width: 66.66%;
-        max-height: 100%;
-    }
+    @include flexPercentage("h");
 
     &.align-h-start {
         justify-content: flex-start;
