--- a/scss/flex-layout.scss
+++ b/scss/flex-layout.scss
@@ -1,21 +1,54 @@
 @import "mixins";
+@mixin flex5($number, $direction) {
+    flex: 1 1 #{$number*1%};
+    box-sizing: border-box;
+    @if ($direction == "v") {
+        max-width: 100%;
+        max-height: #{$number*1%};
+    }
+    @else {
+        max-width: #{$number*1%};
+        max-height: 100%;
+    }
+}
+@mixin flex33($direction) {
+    flex: 1 1 33.33%;
+    box-sizing: border-box;
+    @if ($direction == "v") {
+        max-width: 100%;
+        max-height: 33.33%;
+    }
+    @else {
+        max-width: 33.33%;
+        max-height: 100%;
+    }
+}
+@mixin flex66($direction) {
+    flex: 1 1 66.66%;
+    box-sizing: border-box;
+    @if ($direction == "v") {
+        max-width: 100%;
+        max-height: 66.66%;
+    }
+    @else {
+        max-width: 66.66%;
+        max-height: 100%;
+    }
+}
 @mixin flexPercentage($direction) {
     $i: 0;
     @while $i <= 100 {
         > .flex-#{$i} {
-            flex: 1 1 #{$i*1%};
-            box-sizing: border-box;
-            @if ($direction == "v") {
-                max-width: 100%;
-                max-height: #{$i*1%};
-            }
-            @else {
-                max-width: #{$i*1%};
-                max-height: 100%;
-            }
+            @include flex5($i, $direction);
         }
 
         &.flex-#{$i} {
+            height: 100% !important;
+        }
+        @include blubb("> .flex-#{$i}") {
+             @include flex5($i, $direction);
+        }
+        @include blubb("&.flex-#{$i}") {
             height: 100% !important;
         }
         @if $i < 5 {
@@ -27,36 +60,30 @@
     }
 
     > .flex-33 {
-        flex: 1 1 33.33%;
-        box-sizing: border-box;
-        @if ($direction == "v") {
-            max-width: 100%;
-            max-height: 33.33%;
-        }
-        @else {
-            max-width: 33.33%;
-            max-height: 100%;
-        }
+        @include flex33($direction);
     }
 
     &.flex-33 {
         height: 100% !important;
     }
+    @include blubb("> .flex-33") {
+         @include flex33($direction);
+    }
+    @include blubb("&.flex-33") {
+        height: 100% !important;
+    }
 
     > .flex-66 {
-        flex: 1 1 66.66%;
-        box-sizing: border-box;
-        @if ($direction == "v") {
-            max-width: 100%;
-            max-height: 66.66%;
-        }
-        @else {
-            max-width: 66.66%;
-            max-height: 100%;
-        }
+        @include flex66($direction);
     }
 
     &.flex-66 {
+        height: 100% !important;
+    }
+    @include blubb("> .flex-66") {
+         @include flex66($direction);
+    }
+    @include blubb("&.flex-66") {
         height: 100% !important;
     }
 }
