--- a/scss/flex-layout.scss
+++ b/scss/flex-layout.scss
@@ -156,6 +156,10 @@
         > .flex#{$breakpoint} {
             flex: 1;
             box-sizing: border-box;
+
+            //override max-rules of all flex-n
+            max-width: 100%;
+            max-height: 100%;
         }
 
         &.flex#{$breakpoint} {
