--- a/scss/flex-layout.scss
+++ b/scss/flex-layout.scss
@@ -144,19 +144,74 @@
         }
     }
 }
+@mixin layout-v-flex($breakpoint) {
+    > .flex#{$breakpoint} {
+        height: auto;
+    }
+    $i: 0;
+    @while $i <= 100 {
+        > .flex#{$breakpoint}-#{$i} {
+            max-width: 100%;
+            max-height: #{$i*1%};
+        }
+        @if $i < 5 {
+            $i: $i + 1;
+        }
+        @else {
+            $i: $i + 5;
+        }
+    }
+
+    > .flex#{$breakpoint}-33 {
+        max-width: 100%;
+        max-height: 33.33%;
+    }
+
+    > .flex#{$breakpoint}-66 {
+        max-width: 100%;
+        max-height: 66.66%;
+    }
+}
+@mixin layout-h-flex($breakpoint) {
+    > .flex#{$breakpoint} {
+        width: auto;
+    }
+    $i: 0;
+    @while $i <= 100 {
+        > .flex#{$breakpoint}-#{$i} {
+            max-width: #{$i*1%};
+            max-height: 100%;
+        }
+        @if $i < 5 {
+            $i: $i + 1;
+        }
+        @else {
+            $i: $i + 5;
+        }
+    }
+
+    > .flex#{$breakpoint}-33 {
+        max-width: 33.33%;
+        max-height: 100%;
+    }
+
+    > .flex#{$breakpoint}-66 {
+        max-width: 66.66%;
+        max-height: 100%;
+    }
+}
 @mixin flex($breakpoint: '') {
      @if ($breakpoint != ''){
         $breakpoint: '-#{$breakpoint}';
     }
 
-    .layout-h,
     .layout#{$breakpoint}-h,
-    .layout-v,
-    .layout#{$breakpoint}-v {
+    .layout#{$breakpoint}-v,
+    .layout-h,
+    .layout-v {
         > .flex#{$breakpoint} {
             flex: 1;
             box-sizing: border-box;
-
             //override max-rules of all flex-n
             max-width: 100%;
             max-height: 100%;
@@ -223,64 +278,22 @@
         }
     }
 
-    .layout-v,
-    .layout#{$breakpoint}-v {
-        > .flex#{$breakpoint} {
-            height: auto;
-        }
-        $i: 0;
-        @while $i <= 100 {
-            > .flex#{$breakpoint}-#{$i} {
-                max-width: 100%;
-                max-height: #{$i*1%};
-            }
-            @if $i < 5 {
-                $i: $i + 1;
-            }
-            @else {
-                $i: $i + 5;
-            }
-        }
-
-        > .flex#{$breakpoint}-33 {
-            max-width: 100%;
-            max-height: 33.33%;
-        }
-
-        > .flex#{$breakpoint}-66 {
-            max-width: 100%;
-            max-height: 66.66%;
-        }
+    //do not combine general rule with breakpoint rule to ensure,
+    //that the specific breakpoint rule *always* override the general rule
+    .layout-v {
+        @include layout-v-flex($breakpoint);
     }
 
-    .layout-h,
+    .layout-h {
+        @include layout-h-flex($breakpoint);
+    }
+
+    .layout#{$breakpoint}-v {
+        @include layout-v-flex($breakpoint);
+    }
+
     .layout#{$breakpoint}-h {
-        > .flex#{$breakpoint} {
-            width: auto;
-        }
-        $i: 0;
-        @while $i <= 100 {
-            > .flex#{$breakpoint}-#{$i} {
-                max-width: #{$i*1%};
-                max-height: 100%;
-            }
-            @if $i < 5 {
-                $i: $i + 1;
-            }
-            @else {
-                $i: $i + 5;
-            }
-        }
-
-        > .flex#{$breakpoint}-33 {
-            max-width: 33.33%;
-            max-height: 100%;
-        }
-
-        > .flex#{$breakpoint}-66 {
-            max-width: 66.66%;
-            max-height: 100%;
-        }
+        @include layout-h-flex($breakpoint);
     }
 }
 @mixin mixinsForBreakpoints() {
